# cmip7-cmor-tables

./: .gitignore  README.md  Simple_recmorise_cmip6-cmip7.ipynb  cmor_demo-amip.ipynb  cmor_demo.ipynb  cmor_environment.yml  pixi.toml  pyproject.toml
.github/workflows/: recreate-cmor-cvs-json.yaml
development-tables/: CMIP7_CV.json
reference/: MIP_coordinate.json  MIP_formula_terms.json  MIP_grids.json  MIP_long_name_overrides.json  dr_v1.2.2.2_long_name_overrides.json  dr_v1.2.2.2_realm_overrides.json  dr_v1.2.2.5_long_name_overrides.json  dr_v1.2.2.5_realm_overrides.json
scripts/: cmor_test.py  cmor_test_amip.py  construction.py
tables/: CMIP7_aerosol.json  CMIP7_atmos.json  CMIP7_atmosChem.json  CMIP7_cell_measures.json  CMIP7_coordinate.json  CMIP7_formula_terms.json  CMIP7_grids.json  CMIP7_land.json  CMIP7_landIce.json  CMIP7_long_name_overrides.json  CMIP7_ocean.json  CMIP7_ocnBgchem.json  CMIP7_seaIce.json
tables-cvs/: cmor-cvs.json  generate-cmor-cvs-table.py  recreate-cmor-cvs-json.sh  requirements-cmor-cvs-table.txt
tables-cvs/split-view/: Conventions.json  DRS.json  activity_id.json  area_label.json  branding_suffix.json  creation_date.json  data_specs_version.json  drs_specs.json  experiment_id.json  forcing_index.json  frequency.json  grid_label.json  horizontal_label.json  initialization_index.json  institution_id.json  license.json  mip_era.json  nominal_resolution.json  physics_index.json  product.json  realization_index.json  realm.json  region.json  required_global_attributes.json  source_id.json  temporal_label.json  tracking_id.json  tracking_prefix.json  (+2 more)
test/: CMIP7-CV_for-cmor.json  CMIP7_CV.json  README.md  cmor-cvs.json  esgvoc-integration-cmor-cvs-table.json
