[project]
authors = [
    { name = "Matthew Mizielinski", email = "matthew.mizielinski@metoffice.gov.uk"},
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "pre-commit>=3.3.1", "cmip7-data-request-api==1.3",
]
name = "prototype"
version = "DR-1.2.2.2-v1.0.2"
description = "CMOR tables for CMIP7"
readme = "README.md"

[tool.pixi.workspace]
channels = [
    "conda-forge",
]
platforms = [
    "osx-64",
    "osx-arm64",
    "linux-64",
    # "linux-aarch64",
    # "win-64",
]

[tool.pixi.tasks]

[tool.pixi.dependencies]
cmor = "3.13.0.*"
jupyterlab = ">=4.5.0,<5"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "PL",
    "TRY",
    "NPY",
    "RUF",
    "UP",
    "S",
]
unfixable = [ ]
ignore = [
    "D200",
    "D400",
    "UP007",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
